# Scalping_Futures

./: .env.example  config.yml  instrument_data.py  pyproject.toml  request_response.txt  requirements.txt
scalping_futures/: config.yml  data_for_bot_updating.txt  deep_seek.py  experiments.py  for_know.py  get_operations.py  main.py  main_ChatGPT_o1.py  main_chatGPT.py  orders.py  reports.py  settings.py  subscribers.py  t_p_trailing.py  utils.py
scalping_futures/logs/: scalping
scalping_futures/my_utils/: get_operations.py  get_stops.py  positions.py
